# pathway-viz

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  VISION.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  pypi-publish.yml
data/: streamviz.duckdb.wal
docs/: ARCHITECTURE.md  concepts.md  deployment.md  embedding.md  getting-started.md  index.md  persistence.md  production-improvements.md  widgets.md
docs/examples/: ecommerce.md
examples/: README.md  ecommerce_producer.py  kafka_demo.py  pathway_demo.py  pathway_integration_demo.py  producer.py  simple_demo.py
examples/nextjs/: PathwayVizWidget.tsx  StreamVizWidget.tsx
examples/react/: PathwayVizWidget.tsx  StreamVizWidget.tsx
examples/svelte/: PathwayVizWidget.svelte  StreamVizWidget.svelte
frontend/: embed.html  index.html
python/pathway_viz/: __init__.py  __main__.py  _cli.py  _config.py  _demo.py  _server.py  _widgets.py
python/pathway_viz/demos/: pathway.py  portal.html
python/pathway_viz/docker/: docker-compose.yml
python/pathway_viz/templates/: Dockerfile  README.md  __init__.py  docker-compose.yml  k8s-deployment.yaml  k8s-ingress.yaml  k8s-service.yaml  pipeline.py
python/pathwayviz/: __init__.py  _config.py  _server.py  _widgets.py
python/pathwayviz/demos/: pathway.py
python/stream_viz/: __init__.py  __main__.py  _cli.py  _config.py  _demo.py  _server.py  _state.py  _widgets.py
python/stream_viz/demos/: __init__.py  pathway.py  portal.html
python/stream_viz/templates/: Dockerfile  README.md  __init__.py  docker-compose.yml  k8s-deployment.yaml  k8s-ingress.yaml  k8s-service.yaml  pipeline.py
src/: generator.rs  lib.rs  server.rs  state.rs
tests/: __init__.py  test_basic.py  test_websocket_integration.py
