[package]
name = "pathway_viz"
version = "0.1.5"
edition = "2021"

[lib]
name = "_pathway_viz"
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
rand = "0.8"
